--- a/index.html
+++ b/index.html
@@ -549,8 +549,8 @@
                                         <i class="fa fa-user-md text-success"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-danger mb-2">Experience</p>
-                                        <h5 class="text-danger mb-0">Doctors</h5>
+                                        <h5 class="text-warning mb-0">Yellow</h5>
+                                        <p class="text-warning mb-2">Amber</p>
                                     </div>
                                 </div>
                             </div>
@@ -560,8 +560,8 @@
                                         <i class="fa fa-check text-success"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-secondary mb-2">Quality</p>
-                                        <h5 class="text-secondary mb-0">Services</h5>
+                                        <h5 class="text-danger mb-0">Red</h5>
+                                        <p class="text-danger mb-2">Amber</p>
                                     </div>
                                 </div>
                             </div>
@@ -571,8 +571,8 @@
                                         <i class="fa fa-comment-medical text-success"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-primary mb-2">Positive</p>
-                                        <h5 class="text-primary mb-0">Consultation</h5>
+                                        <h5 class="text-success mb-0">Green</h5>
+                                        <p class="text-success mb-2">Amber</p>
                                     </div>
                                 </div>
                             </div>
@@ -582,8 +582,8 @@
                                         <i class="fa fa-headphones text-success"></i>
                                     </div>
                                     <div class="ms-4">
-                                        <p class="text-info mb-2">24 Hours</p>
-                                        <h5 class="text-info mb-0">Support</h5>
+                                        <h5 class="text-primary mb-0">Blue</h5>
+                                        <p class="text-primary mb-2">Amber</p>
                                     </div>
                                 </div>
                             </div>
