--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <i class="fa fa-user-md text-success"></i>
+                                        <i class="fa-solid fa-gem text-success"></i>
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-warning mb-0">Yellow</h5>
