--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                         <ul class="icon">
                             <li><a href="#"><i class="fa fa-link"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 10 m long</b></h5>
-                            <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Small Fish and Marine Invertebrates</b></h5>
+                            <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Fish and Marine Animals</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Swimming Speed: 5 km/h</b></h5>
                         </ul>
                     </div>
@@ -640,7 +640,7 @@
                         <ul class="icon">
                             <li><a href="#"><i class="fa fa-link"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 2 m long</b></h5>
-                            <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Plants, Eggs, Insects and Lizards</b></h5>
+                            <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Plants, Eggs, Insects</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 40 km/h</b></h5>>
                         </ul>
                     </div>
