--- a/index.html
+++ b/index.html
@@ -608,7 +608,7 @@
                             <h5  style="color:greenyellow;"><b>Lived: North America</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-link"></i></a></li>
+                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 9 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Plants</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 8 km/h</b></h5>
@@ -623,7 +623,7 @@
                             <h5  style="color:greenyellow;"><b>Lived: North America</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-link"></i></a></li>
+                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 10 m long</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Fish and Marine Animals</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Swimming Speed: 5 km/h</b></h5>
@@ -638,9 +638,9 @@
                             <h5  style="color:greenyellow;"><b>Lived: Mongolia</b></h5>
                         </div>
                         <ul class="icon">
-                            <li><a href="#"><i class="fa fa-link"></i></a></li>
+                            <li><a href="#"><i class="fa fa-paw" aria-hidden="true"></i></a></li>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Length: 2 m long</b></h5>
-                            <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Plants, Eggs, Insects</b></h5>
+                            <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Eats: Plants, Eggs and Insects</b></h5>
                             <h5 align="left"  style="color:yellow; line-height:70%"><b> &nbsp; Speed: 40 km/h</b></h5>>
                         </ul>
                     </div>
