--- a/index.html
+++ b/index.html
@@ -430,7 +430,8 @@
     <div class="container-fluid header bg-success p-0 mb-5">
         <div class="row g-0 align-items-center flex-column-reverse flex-lg-row">
             <div class="col-lg-6 p-5 wow fadeIn" data-wow-delay="0.1s">
-                <h1 class="display-4 text-white mb-5">“We are just another kind of dinosaur trying to survive in this world.”</h1>
+                <h1 class="display-4 text-white mb-5">“We are just another kind of dinosaur trying to survive in this world.” <img width="90" height="90" src="https://img.icons8.com/external-photo3ideastudio-gradient-photo3ideastudio/64/000000/external-dinosaur-museum-photo3ideastudio-gradient-photo3ideastudio.png"></h1>
+                
                 <audio controls autoplay>
                     <source src="dinoAudio/angryDino.mp3" type="audio/mp3">
                 </audio>
@@ -498,7 +499,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <a href="https://en.wikipedia.org/wiki/Mesozoic"><p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Mesozoic</p></a>
-                     <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-16.png">
+                    <img width="85" height="85" src="https://img.icons8.com/external-flat-icons-maxicons/85/000000/external-ancient-the-lost-world-flat-flat-icons-maxicons-8.png">
                     <h1 class="mb-4" style="color: #077c0d">The Mysterious Mesozoic: The Age of Reptiles!</h1>
                     <p id="textBackground" style="color:rgb(63, 48, 6);">Deriving from the Greek words " meso" and "zoon", the term "Mesozoic" refers to a geological era that roughly extended from about
                          252 million years ago to around 66 million years ago. This time span is divided into three major dinosaur periods, the Triassic, Jurassic and Cretaceous ages. 
@@ -520,7 +521,7 @@
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                         <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Cartoon</p>
-                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-16.png">
+                         <img width="85" height="85" src="https://img.icons8.com/external-flat-icons-maxicons/85/000000/external-ancient-the-lost-world-flat-flat-icons-maxicons-11.png">
                         <div class="d-flex flex-column">
                             <h1 class="mb-4" style="color:#077c0d">Animal Crossing: Dino Museum</h1>
                             <p id="textBackground" style="color:rgb(63, 48, 6);">Alientopia is a website where you can find everything related to travel, animals and novels. Every now and then, 
@@ -553,7 +554,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Dinosaurs</p>
-                <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-16.png">
+                 <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/000000/external-allosaurus-the-lost-world-filled-outline-filled-outline-icons-maxicons.png">
                 <h1 style="color:green;">Most Popular Dinosaurs</h1>
             </div>
 
@@ -663,7 +664,7 @@
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
                         <a href="https://en.wikipedia.org/wiki/Amber"><p class="d-inline-block border rounded-pill text-dark py-1 px-4" style="color: #077c0d">Amber</p></a>
-                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-16.png">
+                         <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/000000/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-8.png">
                         <h1 class="text-success mb-4">The Most Beautiful Fossil</h1>
                         <p id="textBackground" style="color:rgb(63, 48, 6);">Amber is a kind of hard fossilized tree resin that was formed millions of years ago. 
                             Sometimes small insects like ants or mosquitoes were found trapped inside a resin. This type of natural stone comes in different colors, 
@@ -672,7 +673,7 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <svg xmlns="http://www.w3.org/2000/svg" height="32" width="32" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#FFD43B" d="M116.7 33.8c4.5-6.1 11.7-9.8 19.3-9.8H376c7.6 0 14.8 3.6 19.3 9.8l112 152c6.8 9.2 6.1 21.9-1.5 30.4l-232 256c-4.5 5-11 7.9-17.8 7.9s-13.2-2.9-17.8-7.9l-232-256c-7.7-8.5-8.3-21.2-1.5-30.4l112-152zm38.5 39.8c-3.3 2.5-4.2 7-2.1 10.5l57.4 95.6L63.3 192c-4.1 .3-7.3 3.8-7.3 8s3.2 7.6 7.3 8l192 16c.4 0 .9 0 1.3 0l192-16c4.1-.3 7.3-3.8 7.3-8s-3.2-7.6-7.3-8L301.5 179.8l57.4-95.6c2.1-3.5 1.2-8.1-2.1-10.5s-7.9-2-10.7 1L256 172.2 165.9 74.6c-2.8-3-7.4-3.4-10.7-1z"/></svg>
+                                        <img width="70" height="70" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-age-the-lost-world-flat-flat-icons-maxicons.png">
                                     </div>
                                     <div class="ms-4">
                                         <h5 class="text-warning mb-0">Yellow</h5>
@@ -733,7 +734,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Paleozoic Era</p>
-                <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-16.png">
+                 <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-5.png" >
                 <h1 style="color:green;">Paleozoic Era</h1>
             </div>
             <div class="row g-4">
@@ -746,8 +747,7 @@
                             <h5 style="color:white;">Hallucigenia</h5>
                             <p class="text-warning">Department</p>
                             <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/shellfish.png" alt="shellfish"/></a>
-                                <!--<img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-16.png">-->
+                                <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a>
                             </div>
                         </div>
                     </div>
@@ -760,8 +760,8 @@
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Anomalocaris</h5>
                             <p class="text-warning">Department</p>
-                            <div class="team-text text-center">
-                                <a class="btn btn-square" href=""><img width="50" height="50" src="https://img.icons8.com/bubbles/50/shellfish.png" alt="shellfish"/></a>
+                            <div class="team-social text-center">
+                                <a class="btn btn-square" href=""><img width="70" height="70" src="https://img.icons8.com/external-smashingstocks-outline-color-smashing-stocks/66/external-Shrimp-sea-life-smashingstocks-outline-color-smashing-stocks.png"></a>
                             </div>
                         </div>
                     </div>
@@ -775,7 +775,7 @@
                             <h5 style="color:white;">Trilobita</h5>
                             <p class="text-warning">Department</p>
                             <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><img width="50" height="50" src="https://img.icons8.com/bubbles/50/shellfish.png" alt="shellfish"/></a>
+                                <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/shellfish.png" alt="shellfish"/></a>
                             </div>
                         </div>
                     </div>
@@ -789,7 +789,7 @@
                             <h5 style="color:white;">Ammonoidea</h5>
                             <p class="text-warning">Department</p>
                             <div class="team-social text-center">
-                                <a class="btn btn-square" href=""><img width="50" height="50" src="https://img.icons8.com/bubbles/50/shellfish.png" alt="shellfish"/></a>
+                                <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/nautilus.png"></a>
                             </div>
                         </div>
                     </div>
