--- a/index.html
+++ b/index.html
@@ -665,7 +665,6 @@
                     <div class="p-lg-5 ps-lg-0">
                         <a href="https://en.wikipedia.org/wiki/Amber"><p class="d-inline-block border rounded-pill text-dark py-1 px-4" style="color: #077c0d">Amber</p></a>
                          <img width="70" height="70" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-age-the-lost-world-flat-flat-icons-maxicons.png">
-                         <!-- <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/000000/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-8.png">-->
                         <h1 class="text-success mb-4">The Most Beautiful Fossil</h1>
                         <p id="textBackground" style="color:rgb(63, 48, 6);">Amber is a kind of hard fossilized tree resin that was formed millions of years ago. 
                             Sometimes small insects like ants or mosquitoes were found trapped inside a resin. This type of natural stone comes in different colors, 
@@ -677,7 +676,7 @@
                                         <img width="40" height="40" src="https://img.icons8.com/office/40/one-ring.png">
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="text-warning mb-0">Yellow</h5>
+                                        <h5 class="text-warning mb-0">Golden Ring</h5>
                                         <p class="text-warning mb-2">Amber</p>
                                     </div>
                                 </div>
@@ -688,7 +687,7 @@
                                         <img width="64" height="64" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/FA5252/external-earring-jewellery-flatart-icons-outline-flatarticons-6.png">
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="text-danger mb-0">Red</h5>
+                                        <h5 class="text-danger mb-0">Red Earrings</h5>
                                         <p class="text-danger mb-2">Amber</p>
                                     </div>
                                 </div>
@@ -699,7 +698,7 @@
                                         <img width="64" height="64" src="https://img.icons8.com/external-icongeek26-outline-icongeek26/64/40C057/external-Bracelet-hippie-icongeek26-outline-icongeek26.png">
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="text-success mb-0">Green</h5>
+                                        <h5 class="text-success mb-0">Green Bracelet</h5>
                                         <p class="text-success mb-2">Amber</p>
                                     </div>
                                 </div>
@@ -708,8 +707,9 @@
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
                                         <img width="64" height="64" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-crown-carnival-icongeek26-outline-gradient-icongeek26.png">
+                                    </div>
                                     <div class="ms-4">
-                                        <h5 class="text-primary mb-0">Blue</h5>
+                                        <h5 class="text-primary mb-0">Blue Crown</h5>
                                         <p class="text-primary mb-2">Amber</p>
                                     </div>
                                 </div>
