--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Hallucigenia</h5>
-                            <p class="text-warning">Department</p>
+                            <p class="text-warning">Cambrian</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a>
                             </div>
@@ -759,7 +759,7 @@
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Anomalocaris</h5>
-                            <p class="text-warning">Department</p>
+                            <p class="text-warning">Cambrian</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><img width="70" height="70" src="https://img.icons8.com/external-smashingstocks-outline-color-smashing-stocks/66/external-Shrimp-sea-life-smashingstocks-outline-color-smashing-stocks.png"></a>
                             </div>
@@ -773,7 +773,7 @@
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Trilobita</h5>
-                            <p class="text-warning">Department</p>
+                            <p class="text-warning">Ordovician</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/shellfish.png" alt="shellfish"/></a>
                             </div>
@@ -787,7 +787,7 @@
                         </div>
                         <div class="team-text bg-success text-center p-4">
                             <h5 style="color:white;">Ammonoidea</h5>
-                            <p class="text-warning">Department</p>
+                            <p class="text-warning">Devonian</p>
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><img width="80" height="80" src="https://img.icons8.com/bubbles/100/nautilus.png"></a>
                             </div>
