--- a/index.html
+++ b/index.html
@@ -673,10 +673,11 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <img width="40" height="40" src="https://img.icons8.com/office/40/one-ring.png">
+                                        <!--<img width="40" height="40" src="https://img.icons8.com/office/40/one-ring.png">-->
+                                        <img width="60" height="60" src="img/yAmber.png"> 
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="text-warning mb-0">Golden Ring</h5>
+                                        <h5 class="text-warning mb-0">Yellow</h5>
                                         <p class="text-warning mb-2">Amber</p>
                                     </div>
                                 </div>
@@ -684,10 +685,11 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <img width="64" height="64" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/FA5252/external-earring-jewellery-flatart-icons-outline-flatarticons-6.png">
+                                        <!-- <img width="64" height="64" src="https://img.icons8.com/external-flatart-icons-outline-flatarticons/64/FA5252/external-earring-jewellery-flatart-icons-outline-flatarticons-6.png">-->
+                                        <img width="60" height="60" src="img/rAmber.png"> 
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="text-danger mb-0">Red Earrings</h5>
+                                        <h5 class="text-danger mb-0">Red</h5>
                                         <p class="text-danger mb-2">Amber</p>
                                     </div>
                                 </div>
@@ -695,10 +697,11 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <img width="64" height="64" src="https://img.icons8.com/external-icongeek26-outline-icongeek26/64/40C057/external-Bracelet-hippie-icongeek26-outline-icongeek26.png">
+                                        <!-- <img width="64" height="64" src="https://img.icons8.com/external-icongeek26-outline-icongeek26/64/40C057/external-Bracelet-hippie-icongeek26-outline-icongeek26.png">-->
+                                        <img width="60" height="60" src="img/gAmber.png"> 
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="text-success mb-0">Green Bracelet</h5>
+                                        <h5 class="text-success mb-0">Green</h5>
                                         <p class="text-success mb-2">Amber</p>
                                     </div>
                                 </div>
@@ -706,10 +709,11 @@
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
                                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center rounded-circle bg-light" style="width: 55px; height: 55px;">
-                                        <img width="64" height="64" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-crown-carnival-icongeek26-outline-gradient-icongeek26.png">
+                                        <!-- <img width="64" height="64" src="https://img.icons8.com/external-icongeek26-outline-gradient-icongeek26/64/000000/external-crown-carnival-icongeek26-outline-gradient-icongeek26.png">-->
+                                        <img width="60" height="60" src="img/bAmber.png"> 
                                     </div>
                                     <div class="ms-4">
-                                        <h5 class="text-primary mb-0">Blue Crown</h5>
+                                        <h5 class="text-primary mb-0">Blue</h5>
                                         <p class="text-primary mb-2">Amber</p>
                                     </div>
                                 </div>
