--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">-->
 
+    <!-- Museum Carousel -->
+    <link rel='stylesheet' href='css/swiper.min.css'>
+    <link rel="stylesheet" href="css/Cstyle.css">
+
     <style>
     /*Full Screen Start
         .bg {
@@ -842,6 +846,84 @@
     </div>
     <!-- Museums End -->
 
+    <!-- Museum Carousel Start-->
+
+    <div class="wrapper">
+        <div class="item-bg"></div>
+        <div class="news-slider">
+            <div class="news-slider__wrp swiper-wrapper">
+                <div class="news-slider__item swiper-slide">
+                    <a href="#" class="news__item">
+                    <div class="news-date">
+                        <span class="news-date__title">24</span> <span class="news-date__txt">May</span>
+                    </div>
+                    <div class="news__title">
+                        漂亮山水
+                    </div>
+                    <p class="news__txt">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                    </p>
+                    <div class="news__img">
+                        <img src="img/1.jpg" alt="news">
+                    </div></a>
+                </div>
+                <div class="news-slider__item swiper-slide">
+                    <a href="#" class="news__item">
+                    <div class="news-date">
+                        <span class="news-date__title">25</span> <span class="news-date__txt">May</span>
+                    </div>
+                    <div class="news__title">
+                        旅游景点
+                    </div>
+                    <p class="news__txt">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                    </p>
+                    <div class="news__img">
+                        <img src="img/2.jpg" alt="news">
+                    </div></a>
+                </div>
+                <div class="news-slider__item swiper-slide">
+                    <a href="#" class="news__item">
+                    <div class="news-date">
+                        <span class="news-date__title">26</span> <span class="news-date__txt">May</span>
+                    </div>
+                    <div class="news__title">
+                        景区打卡
+                    </div>
+                    <p class="news__txt">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s...
+                    </p>
+                    <div class="news__img">
+                        <img src="img/3.jpg" alt="news">
+                    </div></a>
+                </div>
+            </div>
+            <div class="news-slider__ctr">
+                <div class="news-slider__arrows">
+                    <button class="news-slider__arrow news-slider-prev"><span class="icon-font"><svg class="icon icon-arrow-left">
+                    <use xlink:href="#icon-arrow-left"></use></svg></span></button> <button class="news-slider__arrow news-slider-next"><span class="icon-font"><svg class="icon icon-arrow-right">
+                    <use xlink:href="#icon-arrow-right"></use></svg></span></button>
+                </div>
+                <div class="news-slider__pagination"></div>
+            </div>
+        </div>
+    </div><svg hidden="hidden">
+    <defs>
+        <symbol id="icon-arrow-left" viewbox="0 0 32 32">
+            <title>
+                arrow-left
+            </title>
+            <path d="M0.704 17.696l9.856 9.856c0.896 0.896 2.432 0.896 3.328 0s0.896-2.432 0-3.328l-5.792-5.856h21.568c1.312 0 2.368-1.056 2.368-2.368s-1.056-2.368-2.368-2.368h-21.568l5.824-5.824c0.896-0.896 0.896-2.432 0-3.328-0.48-0.48-1.088-0.704-1.696-0.704s-1.216 0.224-1.696 0.704l-9.824 9.824c-0.448 0.448-0.704 1.056-0.704 1.696s0.224 1.248 0.704 1.696z"></path>
+        </symbol>
+        <symbol id="icon-arrow-right" viewbox="0 0 32 32">
+            <title>
+                arrow-right
+            </title>
+            <path d="M31.296 14.336l-9.888-9.888c-0.896-0.896-2.432-0.896-3.328 0s-0.896 2.432 0 3.328l5.824 5.856h-21.536c-1.312 0-2.368 1.056-2.368 2.368s1.056 2.368 2.368 2.368h21.568l-5.856 5.824c-0.896 0.896-0.896 2.432 0 3.328 0.48 0.48 1.088 0.704 1.696 0.704s1.216-0.224 1.696-0.704l9.824-9.824c0.448-0.448 0.704-1.056 0.704-1.696s-0.224-1.248-0.704-1.664z"></path>
+        </symbol>
+    </defs></svg> 
+
+    <!-- Museum Carousel End -->
 
     <!-- Footer Start -->
     <footer class="text-center bg-success text-white py-2">               
@@ -927,6 +1009,11 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- Museum Carousel -->
+    <script src="js/jquery.min.js"></script> 
+    <script src='js/swiper.min.js'></script> 
+    <script src="js/script.js"></script>
 
     <!-- Countdown -->
     <script>
