--- a/index.html
+++ b/index.html
@@ -863,9 +863,9 @@
                         <div class="news-slider__wrp swiper-wrapper">
                             <div class="news-slider__item swiper-slide">
                                 <a href="#" class="news__item">
-                                <div class="news-date">
+                                <!--<div class="news-date">
                                     <span class="news-date__title">24</span> <span class="news-date__txt">May</span>
-                                </div>
+                                </div>-->
                                 <div class="news__title">
                                     漂亮山水
                                 </div>
@@ -878,9 +878,9 @@
                             </div>
                             <div class="news-slider__item swiper-slide">
                                 <a href="#" class="news__item">
-                                <div class="news-date">
+                                <!--<div class="news-date">
                                     <span class="news-date__title">25</span> <span class="news-date__txt">May</span>
-                                </div>
+                                </div>-->
                                 <div class="news__title">
                                     旅游景点
                                 </div>
@@ -893,9 +893,9 @@
                             </div>
                             <div class="news-slider__item swiper-slide">
                                 <a href="#" class="news__item">
-                                <div class="news-date">
+                                <!--<div class="news-date">
                                     <span class="news-date__title">26</span> <span class="news-date__txt">May</span>
-                                </div>
+                                </div>-->
                                 <div class="news__title">
                                     景区打卡
                                 </div>
