--- a/index.html
+++ b/index.html
@@ -848,7 +848,7 @@
     
     Museums End -->
 
-    <!-- Museum Carousel Start-->
+ <!-- Museum Carousel Start
     <section id="Museums"></section>
         <div class="container-xxl py-5">
             <div class="container">
@@ -863,9 +863,9 @@
                         <div class="news-slider__wrp swiper-wrapper">
                             <div class="news-slider__item swiper-slide">
                                 <a href="#" class="news__item">
-                                <!--<div class="news-date">
+                                <div class="news-date">
                                     <span class="news-date__title">24</span> <span class="news-date__txt">May</span>
-                                </div>-->
+                                </div>
                                 <div class="news__title">
                                     漂亮山水
                                 </div>
@@ -878,9 +878,9 @@
                             </div>
                             <div class="news-slider__item swiper-slide">
                                 <a href="#" class="news__item">
-                                <!--<div class="news-date">
+                                <div class="news-date">
                                     <span class="news-date__title">25</span> <span class="news-date__txt">May</span>
-                                </div>-->
+                                </div>
                                 <div class="news__title">
                                     旅游景点
                                 </div>
@@ -893,9 +893,9 @@
                             </div>
                             <div class="news-slider__item swiper-slide">
                                 <a href="#" class="news__item">
-                                <!--<div class="news-date">
+                                <div class="news-date">
                                     <span class="news-date__title">26</span> <span class="news-date__txt">May</span>
-                                </div>-->
+                                </div>
                                 <div class="news__title">
                                     景区打卡
                                 </div>
@@ -933,8 +933,8 @@
                 </defs></svg> 
             </div>
         </div>
-        <!-- Museum Carousel End -->
-
+         Museum Carousel End -->
+   
     <!-- Footer Start -->
     <footer class="text-center bg-success text-white py-2">               
                     <!-- Social Media Start-->
