--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
     </div>
     <!-- Paleozoic End -->
 
- <!-- Museum Carousel Start -->
+ <!-- Museum Carousel Start 
     <section id="Museums"></section>
         <div class="container-xxl py-5">
             <div class="container">
@@ -886,9 +886,9 @@
                 </defs></svg> 
             </div>
         </div>
-         <!--Museum Carousel End -->
+         Museum Carousel End -->
    
-    <!-- Museums Start -->
+    <!-- Museums Start 
 
     <section id="Museums"></section>
     <div class="container-xxl py-5">
@@ -927,7 +927,7 @@
         </div>
     </div>
     
-   <!-- Museums End -->
+    Museums End -->
 
     <!-- Footer Start -->
     <footer class="text-center bg-success text-white py-2">               
