--- a/index.html
+++ b/index.html
@@ -854,7 +854,22 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <p class="d-inline-block border rounded-pill py-1 px-4" style="color:green;">Paleozoic Era</p>
-                 <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-5.png" >
+
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-5.png">
+                    </div>
+                    <div class="flip-card-back">
+                        <img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-ancient-the-lost-world-filled-outline-filled-outline-icons-maxicons-23.png">
+                    </div>
+                    </div>
+                </div>
+
+
+                 
+                
+
                 <h1 style="color:green;">Paleozoic Era</h1>
             </div>
             <div class="row g-4">
