--- a/index.html
+++ b/index.html
@@ -780,7 +780,19 @@
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
                         <a href="https://en.wikipedia.org/wiki/Amber"><p class="d-inline-block border rounded-pill text-dark py-1 px-4" style="color: #077c0d">Amber</p></a>
-                         <img width="70" height="70" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-age-the-lost-world-flat-flat-icons-maxicons.png">
+
+                        <div class="flip-card">
+                            <div class="flip-card-inner">
+                              <div class="flip-card-front">
+                                <img width="70" height="70" src="https://img.icons8.com/external-flat-icons-maxicons/85/external-age-the-lost-world-flat-flat-icons-maxicons.png">
+                              </div>
+                              <div class="flip-card-back">
+                                <img width="100" height="100" src="https://img.icons8.com/carbon-copy/100/FAB005/ring-and-earrings.png">
+                              </div>
+                            </div>
+                        </div>
+                                                 
+                         <!--<img width="85" height="85" src="https://img.icons8.com/external-filled-outline-icons-maxicons/85/external-age-the-lost-world-filled-outline-filled-outline-icons-maxicons.png">-->
                         <h1 class="text-success mb-4">The Most Beautiful Fossil</h1>
                         <p id="textBackground" style="color:rgb(63, 48, 6);">Amber is a kind of hard fossilized tree resin that was formed millions of years ago. 
                             Sometimes small insects like ants or mosquitoes were found trapped inside a resin. This type of natural stone comes in different colors, 
