--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             display: none;
         }
         .popup-content {
-            background-color: white;
+            background-color: #F7DC6F;
             margin: 10% auto;
             padding: 20px;
             border: 1px solid #888888;
@@ -325,6 +325,11 @@
         .popup-content button {
             display: block;
             margin: 0 auto;
+            color:#F7DC6F;
+            background-color: #04AA6D; /* Green */
+            cursor: pointer;
+            border-radius: 12px;
+
         }
         .show {
             display: block;
@@ -878,10 +883,6 @@
                     </div>
                 </div>
 
-
-                 
-                
-
                 <h1 style="color:green;">Paleozoic Era</h1>
             </div>
             <div class="row g-4">
@@ -900,7 +901,7 @@
 
                             <button id="myButton"><a class="btn btn-square"><img width="95" height="95" src="https://img.icons8.com/bubbles/100/000000/phasmatodea.png"></a></button>
                               <div id="myPopup" class="popup">
-                                <div class="popup-content">
+                                <div class="popup-content corner">
                                       <h1 style="color:green;">Hallucigenia</h1>
                                       <p style="text-align: justify;">This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!</p>
                                       <button id="closePopup">Close</button>
