--- a/index.html
+++ b/index.html
@@ -840,19 +840,19 @@
                     <div class="position-relative h-100">
                         <div class="gallery">
                             <div class="clipped-border">
-                                <img src="img/Spinosaurus.jpg" id="clipped">
+                                <img src="img/rAmber.png" id="clipped">
                             </div>
                             <div class="clipped-border">
-                                <img src="img/Spinosaurus.jpg" id="clipped">
+                                <img src="img/YAmber.jpg" id="clipped">
                             </div>
                             <div class="clipped-border">
-                                <img src="img/Spinosaurus.jpg"  id="clipped">
+                                <img src="img/BAmber.jpg"  id="clipped">
                             </div>
                             <div class="clipped-border">
-                                <img src="img/Spinosaurus.jpg"  id="clipped">
+                                <img src="img/GAmber.jpg"  id="clipped">
                             </div>
                             <div class="clipped-border">
-                                <img src="img/Spinosaurus.jpg"  id="clipped">
+                                <img src="img/D"  id="clipped">
                             </div>
                             <div class="shadow"></div>
                         </div>
