--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
                     <div class="position-relative h-100">
                         <div class="gallery">
                             <div class="clipped-border">
-                                <img src="img/rAmber.png" id="clipped">
+                                <img src="img/RAmber.jpg" id="clipped">
                             </div>
                             <div class="clipped-border">
                                 <img src="img/YAmber.jpg" id="clipped">
@@ -852,7 +852,7 @@
                                 <img src="img/GAmber.jpg"  id="clipped">
                             </div>
                             <div class="clipped-border">
-                                <img src="img/DAmber.jpg"  id="clipped">
+                                <img src="img/CAmber.jpg"  id="clipped">
                             </div>
                             <div class="shadow"></div>
                         </div>
