--- a/index.html
+++ b/index.html
@@ -624,9 +624,9 @@
                         </div>
                     </div>
                     <div class="owl-carousel-item position-relative">
-                        <img class="img-fluid" src="img/Dimorphodon.jpg" alt="">
+                        <img class="img-fluid" src="img/Pterosaur.jpg" alt="">
                         <div class="owl-carousel-text">
-                            <h1 class="display-1 text-white mb-0">Dimorphodon</h1>
+                            <h1 class="display-1 text-white mb-0">Pterosaur</h1>
                         </div>
                     </div>
                 </div>
