--- a/index.html
+++ b/index.html
@@ -685,8 +685,8 @@
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-                    <a href="https://en.wikipedia.org/wiki/Mesozoic"><p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Mesozoic</p></a>
-                   
+                    <!--<a href="https://en.wikipedia.org/wiki/Mesozoic"><p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Mesozoic</p></a>-->
+                    <a href="https://en.wikipedia.org/wiki/Mesozoic"><button type="button" class="btn btn-outline-success rounded-pill">Mesozoic</button></a>
                     <div class="flip-card">
                         <div class="flip-card-inner">
                           <div class="flip-card-front">
@@ -718,8 +718,8 @@
             <div class="container">
                 <div class="row g-5">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                        <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Animation</p>
-
+                        <!--<p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Animation</p>-->
+                        <button type="button" class="btn btn-outline-success rounded-pill">Animation</button>
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -811,8 +811,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Dinosaurs</p>
-
+                <!--<p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Dinosaurs</p>-->
+                <button type="button" class="btn btn-outline-success rounded-pill">Dinosaurs</button>
                 <div class="flip-card">
                     <div class="flip-card-inner">
                       <div class="flip-card-front">
@@ -932,8 +932,8 @@
             <div class="row g-0 mx-lg-0">
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="p-lg-5 ps-lg-0">
-                        <a href="https://en.wikipedia.org/wiki/Amber"><p class="d-inline-block border rounded-pill text-dark py-1 px-4" style="color: #077c0d">Amber</p></a>
-
+                        <!--<p class="d-inline-block border rounded-pill py-1 px-4" style="color: #077c0d">Amber</p>-->
+                        <button type="button" class="btn btn-outline-success rounded-pill">Amber</button>
                         <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
@@ -1040,8 +1040,10 @@
                     <p class="d-inline-block"><button id="myButton" type="button" class="btn btn-outline-success rounded-pill">Paleozoic Era</button></p>
                     <div id="myPopup" class="popup">
                         <div class="popup-content corner">
-                            <h1 style="color:green;">Hallucigenia</h1>
-                            <p style="text-align: justify;">This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!This is a popup box!</p>
+                            <h1 style="color:green;">Paleozoic</h1>
+                            <p style="text-align: justify;">The Paleozoic is a period of geologic time when life first appeared on Earth. 
+                                The Paleozoic is subdivided into six geologic periods: the Cambrian, Ordovician, Silurian, Devonian, Carboniferous and Permian.</p>
+                            <img class="corner" src="img/Paleozoic.jpg" alt="">    
                             <button id="closePopup">Close</button>
                         </div>
                     </div>
